--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,19 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=
 
+TOKENREAD_DB_HOST=hoth.tokencash.mx
+TOKENREAD_DB_NAME=klay_pyxter_tokencash_dbm1_dbm
+TOKENREAD_DB_USERNAME=hoth_tkncshread
+TOKENREAD_DB_PASSWORD=Y!9d@yLiLCxZ=Rjd
+
+TOKENWRITE_DB_HOST=hyrrokkin.delfeno.com.mx
+TOKENWRITE_DB_PORT=3306
+TOKENWRITE_DB_NAME=klay_pyxter_tokencash_dbm1_dbm
+TOKENWRITE_DB_USERNAME=pepe.medina
+TOKENWRITE_DB_PASSWORD='5p*Eo"E25.9a'
+
 BROADCAST_DRIVER=log
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
